--- a/web/.env.local.exemple
+++ b/web/.env.local.exemple
@@ -1,1 +1,3 @@
-VITE_PUBLIC_API_URL
+VITE_PUBLIC_API_URL = // URL API PROD
+VITE_PUBLIC_LOCAL_API_URL = // URL API LOCAL
+VITE_JWT_SECRET = // SECRET JWT
