--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.8",
+    "@mui/material": "^6.1.8",
     "@tanstack/react-query": "^4.36.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
