--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^6.1.8",
     "@mui/material": "^6.1.8",
     "@tanstack/react-query": "^4.36.1",
+    "bootstrap": "^5.3.3",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.6",
