--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.8",
     "@tanstack/react-query": "^4.36.1",
     "bootstrap": "^5.3.3",
+    "html2pdf.js": "^0.10.2",
     "jwt-decode": "^4.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
