--- a/back/.env.local.exemple
+++ b/back/.env.local.exemple
@@ -1,6 +1,6 @@
-PORT = 
-MONGODB_URI =
-JWT_TIME_OUT = 
-JWT_TOKEN =
+PORT = // port du serveur
+MONGODB_URI = // uri de la base de donnée
+JWT_TIME_OUT = // durée de validité du token
+JWT_TOKEN = // clé secrète pour le token
 
 
